--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
                             aute iruredolor in reprehenderit in voluptate velit esse cillum
                         </p>
-                        <a href="#">Get Started</a>
+                        <a href="#" class="button">Get Started</a>
                 </article>
 
                 <article class="main-content-article">
@@ -107,18 +107,18 @@
                         <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
                             aute iruredolor in reprehenderit in voluptate velit esse cillum
                         </p>
-                        <a href="#">Buy Now</a>
+                        <a href="#" class="button">Buy Now</a>
                 </article>
             </section>
 
      <!--Rodapé-->
-     <footer>
-         <ul>
-             <li><a href="#">Facebook</a></li>
-             <li><a href="#">Twitter</a></li>
-             <li><a href="#">Google Plus</a></li>
+     <footer class="footer">
+         <ul class="footer-menushare">
+             <li><a href="#" class="icon-facebook"><span class="hidden">Facebook</span></a></li>
+             <li><a href="#" class="icon-twitter"><span class="hidden">Twitter</span></a></li>
+             <li><a href="#" class="icon-google-plus"><span class="hidden">Google Plus</span></a></li>
          </ul>
-         <p>Copyright The Range</p>
+         <p class="footer-copyright">Copyright The Range</p>
          <p> Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
             dolor in reprehenderit in voluptate velit esse cillum
         </p>
