--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <!-- Cabeçalho contem logotipo e barra de navegação-->
-    <header class="top-header">
+    <header class="top-header clearfix">
             <img src="images/logo_mob.svg" alt="logotipo range Hotels "class="top-header-logo">
         <nav class="top-nav">
             <!-- Barra de navegação-->
